# agent-offering-app-mod

./: .gitignore  LICENSE  README.md
app-mod-agent/: .env.prod.yaml  Dockerfile  Makefile  pyproject.toml
app-mod-agent/app/: agent.py  cloudbuild.yaml  config.py  prompt.py  server.py
app-mod-agent/app/api/: agent.py
app-mod-agent/app/sub_agents/application_analyzer_agent/: __init__.py  agent.py  application_analyzer_seq_agent.py  config.py  pdf_tools.py  prompt.py
app-mod-agent/app/sub_agents/discovery_intent_identifier_agent/: __init__.py  agent.py  config.py  prompt.py
app-mod-agent/app/sub_agents/discovery_root_agent/: __init__.py  agent.py  discovery_tools.py  prompt.py
app-mod-agent/app/templates/: executive_report_template.html  google_material.css
app-mod-agent/app/utils/: tracing.py
app-mod-agent/frontend/vite-project/: cloudbuild.yaml  package-lock.json
app-mod-agent/frontend/vite-project/src/: App.tsx
cloudbuild/: lint-backend.yaml  lint-frontend.yaml  spellcheck.yaml
ingestion-svc/: .env.dev.yaml  .env.prod.yaml  .env.sample  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
ingestion-svc/app/: main.py
ingestion-svc/app/api/routes/: ingest.py
ingestion-svc/app/core/: database.py  logger.py  workspace_manager.py
ingestion-svc/app/models/: domain.py  schemas.py
ingestion-svc/app/services/: bitbucket.py  gcs.py  github.py  gitlab.py
ingestion-svc/app/utils/: parsers.py
ingestion-svc/terraform/: README.md
ingestion-svc/terraform/environments/dev/: main.tf  variables.tf
ingestion-svc/terraform/environments/prod/: main.tf  variables.tf
ingestion-svc/terraform/modules/backing_infra/: main.tf  outputs.tf  variables.tf
ingestion-svc/tests/: test_ingest.py
(+36 files in other folders)
