[project]
name = "ingestion-svc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "google-cloud-storage>=3.10.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "pyopenssl>=24.0.0",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "sse-starlette>=3.3.4",
    "uvicorn>=0.44.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff specific rules
]
ignore = ["E501", "C901", "B008", "B904"]

[tool.mypy]
python_version = "3.12"
follow_imports = "silent"
ignore_missing_imports = true
explicit_package_bases = true
disable_error_code = ["misc", "no-untyped-call", "no-any-return", "no-untyped-def", "union-attr", "arg-type", "call-arg", "method-assign", "assignment"]
exclude = [".venv", "venv"]

